possible fix for iframe view having too much white in it

--- a/e_404_page/e_404_page.css
+++ b/e_404_page/e_404_page.css
@@ -182,14 +182,16 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  align-items: stretch;
 }
 
 #google-docs-iframe {
-  margin-top: 6vw;
-  width: 80vw;
-  height: 70vh;
+  margin-top: 0;
+  width: 100vw;
+  height: 100vh;
   border: none;
   background: black;
+  display: block;
 }
 
 .google-docs-home-btn {
